--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:1.0.0-beta04"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:2.33-beta"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:1.0.0-beta04"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
